--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,40 @@ header {
   text-align: center;
 }
 
+nav {
+  border-top: 3px solid #648fba;
+  padding-top: 15px;
+  overflow: auto;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+nav li {
+  background-color: #648fba;
+  padding: 10px;
+  width: 100px;
+}
+
+nav li:hover {
+  background-color: #567ba0;
+}
+
+nav a {
+  color: white;
+  font-size: larger;
+  margin: 0 2px;
+}
+
+nav a:hover {
+  color: #e0e0e0;
+}
+
 main {
   max-width: 900px;
   margin: 30px auto;
@@ -27,6 +61,7 @@ section {
 
 ul {
   list-style-type: disc;
+  padding-left: 2em;
 }
 
 li {
@@ -50,13 +85,22 @@ footer {
 }
 
 h2 {
+  font-size: 1.5em;
   color: #2c3e50;
   border-bottom: 2px solid #e0e0e0;
   padding-bottom: 10px;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2em;
+  font-weight: bold;
 }
 
 p {
   line-height: 25px;
+  font-size: 1em;
+  margin: 1em 0;
 }
 
 code {
